-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Beta
-
None
-
Windows XP / Arch Linux - Qt 5.5 beta
-
99afd9dd4c6670f1010153a97efdcfa1014042a0
QAction::setAutoRepeat(false) doesn't work with Qt 5.5 beta. The attachment contains simple program which can reproduce the issue:
- compile and run the program with Qt 5.5 beta,
- press and hold "F" key,
- look at the console output - the message is repeated.