Fix QAction::setAutoRepeat(false)

When cleaning up the shortcut override code, in
d7ca800a87a2291c94c6580f0cfe068bb2280caf passing on the autorepeat flags
from the native event was accidentally dropped in the call to
QWindowSystemInterface::tryHandleShortcutEvent.

Task-number: QTBUG-46569
Change-Id: Ib053e11e582de630a1fc1b754f8d10d995c88026
Reviewed-by: Gabriel de Dietrich <gabriel.dedietrich@theqtcompany.com>

cregit: 99afd9dd4c6670f1010153a97efdcfa1014042a0 https://github.com/qt/qtbase/commit/99afd9dd4c6670f1010153a97efdcfa1014042a0